--- a/public/style.css
+++ b/public/style.css
@@ -69,9 +69,9 @@ button:hover {
 }
 
 button {
-    height: 100px;
-    width: 100px;
-    font-size: large;
+    height: 80px;
+    width: 80px;
+    font-size: medium;
 }
 
 img {
